@@ -1,3 +1,9 @@
+2003-08-07  Bernardo Innocenti  <bernie@develer.com>
+
+	PR libstdc++/11784
+	* libstdc++-v3/config/cpu/m68k/atomicity.h (__exchange_and_add):
+	Replace variants with new BSET-based version.
+	
 2003-08-07  Carlo Wood  <carlo@alinoe.com>
 
         * include/bits/demangle.h: Do not use cctype functions that depend
